--- a/Website/scores.html
+++ b/Website/scores.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Scores</title>
+    <a href="home.html">home</a>
+    <a href="scores.html">Scores</a>
 </head>
 <body>
-
+<h1>Top Scores</h1>
+<main>
+    <h2>Top Scores Multi</h2>
+    <ul>
+        <li></li>
+        <li></li>
+    </ul>
+    <h2>Top Scores short form</h2>
+    <ul>
+        <li></li>
+        <li></li>
+    </ul>
+</main>
 </body>
 </html>
