--- a/Website/home.html
+++ b/Website/home.html
@@ -4,25 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Home</title>
-    <link rel="stylesheet" href="/static/home.css">
+    <link href="/Website/css/home.css" th:href="@{/css/home.css}" rel="stylesheet" />
     <nav>
-        <a class = "nav" href="@{/home}">home</a>
-        <a class = "nav" href="@{/scores}">Scores</a>
+        <a id = "home" href="@{/home}">Home</a>
+        <a id = "scores" href="@{/scores}">Scores</a>
     </nav>
 </head>
 <body>
 
 <h1>Quiz Home</h1>
-<main>
+<main id = quizes>
     <div>
-        <form action="#" th:action="@{/multiTest}" method="post">
+        <form action="#" th:action="@{/multiTest}" method="post" class="quiz-form">
             <h2>Multi Test</h2>
+            <img src="/Website/images/multipeChoicePlaceHolder.png" alt="multipeChoicePlaceHolder">
             <button id="multiTest" type="submit">Start</button>
         </form>
     </div>
     <div>
-        <form action="#" th:action="@{/shortFormTest}" method="post">
+        <form action="#" th:action="@{/shortFormTest}" method="post" class="quiz-form">
             <h2>Short Form</h2>
+            <img src="/Website/images/ShortAnswerPlaceHolder.png" alt="shortAnswerPlaceHolder">
             <button id="shortFormTest" type="submit">Start</button>
         </form>
     </div>
