Added get mapping for other html pages and navigation links between all pages, linked images and style sheets through thymleaf

--- a/scores.html
+++ b/scores.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Home</title>
-    <nav>
-        <li><a id = nav href="/">home</a></li>
-        <li><a id = nav href="/scores.html">Scores</a></li>
-    </nav>
+
 </head>
 <body>
-
+<nav>
+    <ul>
+        <li><a href="/home">Home</a></li>
+        <li><a href="/scores">Scores</a></li>
+        <li><a href="/quiz">Take A Quiz!</a></li>
+    </ul>
+</nav>
 <h1>Quiz Home</h1>
 <main>
     <div>
